--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "description": "",
   "devDependencies": {
     "tailwindcss": "^3.4.14"
+  },
+  "dependencies": {
+    "swiper": "^11.1.14",
+    "tailwind-scrollbar-hide": "^1.1.7"
   }
 }
